--- a/app/index.html
+++ b/app/index.html
@@ -30,17 +30,19 @@
      <source srcset="assets/images/hero--medium.jpg 1380px, assets/images/hero--medium-hi-dpi.jpg 2760w" media="(min-width: 990px">
      <source srcset="assets/images/hero--small.jpg 990px, assets/images/hero--small-hi-dpi.jpg 1980w" media="(min-width: 640px">
 
-    <img srcset="assets/images/hero--smaller.jpg 640w, assets/images/hero--smaller-hi-dpi.jpg 1280w " alt="coastal view">
+    <img srcset="assets/images/hero--smaller.jpg 640w, assets/images/hero--smaller-hi-dpi.jpg 1280w " alt="coastal view" class="large-hero__image">
   </picture>
     <div class="large-hero__text-content">
+      <div class="wrapper">
       <h1 class="large-hero__title">Your clarity.</h1>
       <h2 class="large-hero__subtitle">One trip away.</h2>
       <p class="large-hero__description">We create soul restoring journeys that inspire you to be you.</p>
       <p><a href="#" class="btn btn--orange btn--large">Get Started Today</a></p>
     </div>
+    </div>
   </div>
 
-  <div id="our-beginning">
+  <div id="our-beginning" class="page-section">
     <h2>The first trip we planned was our own.</h2>
     <h3>Ever since, we&rsquo;ve been working to make travel better for everyone.</h3>
     <img src="assets/images/first-trip.jpg" alt="Couple walking down a street.">
@@ -51,7 +53,8 @@
     <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum velit esse cillum <strong>dolore eu fugiat.</strong></p>
   </div>
 
-  <div id="features">
+  <div id="features" class="page-section page-section__blue">
+    <div class="wrapper">
     <img src="assets/images/icons/star.svg">
     <h2>Our Features</h2>
   
@@ -70,6 +73,7 @@
     <img src="assets/images/icons/fire.svg">
     <h3>Survival Kit</h3>
     <p>Everytime you book an escape with us we send you a survival kit with the finest materials. The kit will allow you to setup a tent, start a fire, scratch your own back and lower your taxes.</p>
+    </div>
   </div>
 
   <div id="testimonials">
